--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ input, a, button {
 #wrap {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(45deg, hotpink, skyblue);
+  background: linear-gradient(45deg, hotpink, blue);
   display: flex;
   justify-content: center;
   align-items: center;
